; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/ftp/ftpd/extr_ls.c_free_fileinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/ftp/ftpd/extr_ls.c_free_fileinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fileinfo = type { i32, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fileinfo*)* @free_fileinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_fileinfo(%struct.fileinfo* %0) #0 {
  %2 = alloca %struct.fileinfo*, align 8
  store %struct.fileinfo* %0, %struct.fileinfo** %2, align 8
  %3 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %4 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %3, i32 0, i32 7
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @free(i32 %5)
  %7 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %8 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %7, i32 0, i32 6
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @free(i32 %9)
  %11 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %12 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %11, i32 0, i32 5
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @free(i32 %13)
  %15 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %16 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @free(i32 %17)
  %19 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %20 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @free(i32 %21)
  %23 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %24 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @free(i32 %25)
  %27 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %28 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @free(i32 %29)
  %31 = load %struct.fileinfo*, %struct.fileinfo** %2, align 8
  %32 = getelementptr inbounds %struct.fileinfo, %struct.fileinfo* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @free(i32 %33)
  ret void
}

declare dso_local i32 @free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
